unpackaged/objects/Unassigned_Local_Products__c.object
<CustomObject>
  <description>This objects integrated unassigned local products from the GDW that has sales attached. These sales items will not appear until these local products are assigned a global SKU. The records will then be deleted from this object</description>
  <fields>
    <fullName>Article_SKU__c</fullName>
    <description>The SKU number</description>
    <inlineHelpText>The SKU number</inlineHelpText>
    <label>Article (SKU)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SKU_Key__c</fullName>
    <externalId>true</externalId>
    <label>SKU Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>SSIS_ERP_SKU_Market_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSIS: ERP/SKU - Market Mapping</label>
    <referenceTo>SSIS_ERP_SKU_Metadata_Country_Connectio__c</referenceTo>
    <relationshipLabel>Unassigned Local Products</relationshipLabel>
    <relationshipName>Unassigned_Local_Products</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Source_Description__c</fullName>
    <description>The Text version of the ERP source ID (1=M3, 2=AX)</description>
    <formula>CASE( Source_ID__c , 
1, "M3", 
2, "AX",
null)</formula>
    <inlineHelpText>The Text version of the ERP source ID (1=M3, 2=AX)</inlineHelpText>
    <label>Source Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Source_ID__c</fullName>
    <label>Source ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Valid_in_My_market__c</fullName>
    <description>This field is checked if the unassigned local SKU is in the users market, used in reports and view filters</description>
    <formula>IF(SSIS_ERP_SKU_Market_Mapping__r.AX_Company_Code__c = TEXT(case($User.Market__c,
"BeNeLux", 174,
"Iberia", 550,
"France",116, 
"Italy", 150,
"Japan", 178,
"UK", 047,
null)), True, False)</formula>
    <inlineHelpText>This field is checked if the unassigned local SKU is in the users market, used in reports and view filters</inlineHelpText>
    <label>Valid in My market</label>
    <type>Checkbox</type>
  </fields>
  <label>Unassigned Local Product</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Source_Description__c</columns>
    <columns>Valid_in_My_market__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_markets_unassigned_SKUs</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Source_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Valid_in_My_market__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>My markets unassigned SKUs</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Unassigned Local Products Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Unassigned Local Products</pluralLabel>
  <sharingModel>Read</sharingModel>
</CustomObject>